--- a/resources/lang/en_EN.xml
+++ b/resources/lang/en_EN.xml
@@ -52,5 +52,16 @@
     <translation key="current_version_text">v {}</translation>
     <translation key="update_error_text">Check failed</translation>
     <translation key="no_connection_text">No connection to server</translation>
+
+    <!-- ================= -->
+    <!-- SkyChecker -->
+    <!-- ================= -->
+    <translation key="window_settings_title">Sky.exe selection</translation>
+    <translation key="select_sky_exe_instruction">Please select the Sky.exe:</translation>
+    <translation key="select_sky_exe">Select Sky.exe</translation>
+    <translation key="exe_path_required">You must select the Sky. exe to continue</translation>
+    <translation key="exe_path_required_exit">The application is terminated because the Sky.exe is required</translation>
+    <translation key="must_select_sky">Please select the Sky.exe file</translation>
+    <translation key="exe_path_invalid">The selected file does not exist</translation>
     
 </translations>
