Improve song file parsing and add error translations
Enhanced the song file parsing logic in music_player.py to better handle UTF-16/UTF-8 encodings, more robustly extract song notes and titles, and provide clearer error messages. Added 'invalid_song_format' translations to all supported languages. Updated version to 2.4.3.1.

--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -23,6 +23,7 @@
     <translation key="sky_not_running">يجب أن يكون سكاي قيد التشغيل!</translation>
     <translation key="missing_song_notes">بيانات الأغنية مفقودة (songNotes)</translation>
     <translation key="invalid_speed">سرعة غير صالحة! يجب أن تكون أكبر من 0.</translation>
+    <translation key="invalid_song_format">تنسيق الأغنية غير صالح</translation>
 
     <!-- ================= -->
     <!-- وظائف مشغل الموسيقى -->
