--- a/resources/lang/de_DE.xml
+++ b/resources/lang/de_DE.xml
@@ -23,6 +23,7 @@
     <translation key="sky_not_running">Sky muss laufen!</translation>
     <translation key="missing_song_notes">Song-Daten fehlen (songNotes)</translation>
     <translation key="invalid_speed">Ungültige Geschwindigkeit! Muss größer als 0 sein.</translation>
+    <translation key="invalid_song_format">Ungültiges Songformat</translation>
 
     <!-- ================= -->
     <!-- MUSIKPLAYER-FUNKTIONEN -->
