--- a/resources/lang/it_IT.xml
+++ b/resources/lang/it_IT.xml
@@ -23,6 +23,7 @@
     <translation key="sky_not_running">Sky deve essere in esecuzione!</translation>
     <translation key="missing_song_notes">Dati canzone mancanti (songNotes)</translation>
     <translation key="invalid_speed">Velocità non valida! Deve essere maggiore di 0.</translation>
+    <translation key="invalid_song_format">Formato brano non valido</translation>
 
     <!-- ================= -->
     <!-- FUNZIONI DEL LETTORE MUSICALE -->
