--- a/resources/lang/mg_MG.xml
+++ b/resources/lang/mg_MG.xml
@@ -23,6 +23,7 @@
     <translation key="sky_not_running">Tokony hiasa ny Sky!</translation>
     <translation key="missing_song_notes">Tsy hita ny angona momba ny hira (songNotes)</translation>
     <translation key="invalid_speed">Hafainganana tsy manan-kery! Tokony lehibe noho ny 0.</translation>
+    <translation key="invalid_song_format">Diso ny endriky ny hira na ny fanoratana azy</translation>
 
     <!-- ================= -->
     <!-- ASA NY MPILALAO MOZIKA -->
