Refactor config structure and improve playback UI
Reorganized configuration into nested sections for game, playback, timing, and UI settings, with migration and upgrade logic. Updated codebase to use new config structure, improved error handling, and enhanced playback UI feedback (e.g., play button state and text). Added 'playing_button_text' translation to all language files. Music player now logs ramping and timing details, clamps speed values, and clears cache on shutdown.

--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">حفظ</translation>
     <translation key="smooth_ramping">الانتقالات السلسة</translation>
     <translation key="smooth_ramping_info">يضبط السرعة بسلاسة في بداية ونهاية الأغنية لانتقالات أكثر طبيعية.</translation>
+    <translation key="playing_button_text">يعمل...</translation>
     
     <!-- ================= -->
     <!-- معلومات الإصدار -->
