--- a/resources/lang/mg_MG.xml
+++ b/resources/lang/mg_MG.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">Tehirizo</translation>
     <translation key="smooth_ramping">Fandefasana malefaka</translation>
     <translation key="smooth_ramping_info">Manitsy ny hafainganana amim-pitandremana eo am-piandohana sy eo amin'ny faran'ny hira mba hahatonga ny fandefasana ho voajanahary kokoa.</translation>
+    <translation key="playing_button_text">Milalao...</translation>
     
     <!-- ================= -->
     <!-- FAMPANDRAISANA NY VERSIONS -->
