--- a/resources/lang/nl_NL.xml
+++ b/resources/lang/nl_NL.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">Opslaan</translation>
     <translation key="smooth_ramping">Zachte Overgangen</translation>
     <translation key="smooth_ramping_info">Past de snelheid aan het begin en einde van het lied soepel aan voor natuurlijkere overgangen.</translation>
+    <translation key="playing_button_text">Speelt...</translation>
     
     <!-- ================= -->
     <!-- VERSIE-INFORMATIE -->
