--- a/resources/lang/en_US.xml
+++ b/resources/lang/en_US.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">Save</translation>
     <translation key="smooth_ramping">Smooth Transitions</translation>
     <translation key="smooth_ramping_info">Smoothly adjusts speed at the beginning and end of the song for more natural transitions.</translation>
+    <translation key="playing_button_text">Playing...</translation>
     
     <!-- ================= -->
     <!-- VERSION INFORMATION -->
