--- a/resources/lang/es_ES.xml
+++ b/resources/lang/es_ES.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">Guardar</translation>
     <translation key="smooth_ramping">Transiciones Suaves</translation>
     <translation key="smooth_ramping_info">Ajusta suavemente la velocidad al principio y al final de la canción para transiciones más naturales.</translation>
+    <translation key="playing_button_text">Sonando...</translation>
     
     <!-- ================= -->
     <!-- INFORMACIÓN DE VERSIÓN -->
