--- a/resources/lang/pt_PT.xml
+++ b/resources/lang/pt_PT.xml
@@ -45,6 +45,7 @@
     <translation key="save_button_text">Salvar</translation>
     <translation key="smooth_ramping">Transições Suaves</translation>
     <translation key="smooth_ramping_info">Ajusta suavemente a velocidade no início e no final da música para transições mais naturais.</translation>
+    <translation key="playing_button_text">Tocando...</translation>
     
     <!-- ================= -->
     <!-- INFORMAÇÃO DA VERSÃO -->
