Improve play button state management and translations
Refactored play button logic in ProjectLyrica.py for robust state handling (playing, paused, restart, disabled) and dynamic UI updates. Added new translation keys for paused, restart, and pause key hint in all language XML files. Improved playback stop and pause/resume logic, and enhanced logging in music_player.py for playback state changes.

--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -46,6 +46,9 @@
     <translation key="smooth_ramping">Glatte Overgange</translation>
     <translation key="smooth_ramping_info">Justerer hastigheden blødt i begyndelsen og slutningen af sangen for mere naturlige overgange.</translation>
     <translation key="playing_button_text">Spiller...</translation>
+    <translation key="paused_button_text">Pauset</translation>
+    <translation key="restart_button_text">Genstarte?</translation>
+    <translation key="pause_key_hint">eller brug [pause_key]</translation>
     
     <!-- ================= -->
     <!-- VERSIONOPLYSNINGER -->
