--- a/resources/lang/pl_PL.xml
+++ b/resources/lang/pl_PL.xml
@@ -46,6 +46,9 @@
     <translation key="smooth_ramping">Płynne przejścia</translation>
     <translation key="smooth_ramping_info">Płynna regulacja prędkości na początku i końcu utworu dla bardziej naturalnych przejść.</translation>
     <translation key="playing_button_text">Gra...</translation>
+    <translation key="paused_button_text">Wstrzymane</translation>
+    <translation key="restart_button_text">Wznowić?</translation>
+    <translation key="pause_key_hint">lub użyj [pause_key]</translation>
     
     <!-- ================= -->
     <!-- INFORMACJE O WERSJI -->
